# intnslib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/intns/: io.hpp  memory.hpp
src/intns/io/: BinaryReader.hpp  IoTypes.hpp
src/intns/memory/: Alignment.hpp  ObjectPool.hpp  ObjectPool.tpp  StackAllocator.cpp  StackAllocator.hpp
